2006-10-20  Carlos Garcia Campos  <carlosgc@gnome.org>

	* configure.in:
	* src/Makefile.am:
	* src/main.c:

	Make libgnomeui an optional dependency enabled by default when
	available

2006-10-08  Carlos Garcia Campos  <carlosgc@gnome.org>

	* src/buoh-comic-manager-date.c:

	Use g_date_set_time_t when available (glib >= 2.10) instead of
	g_date_set_time which is deprecated. Use g_date_set_parse instead of
	strptime. 

2006-10-08  Carlos Garcia Campos  <carlosgc@gnome.org>

	* src/buoh-add-comic-dialog.c:
	* src/buoh-comic-cache.c:
	* src/buoh-comic-list.c:
	* src/buoh-comic-loader.c:
	* src/buoh-comic-manager-date.[ch]:
	* src/buoh-comic-manager.[ch]:
	* src/buoh-comic.c:
	* src/buoh-properties-dialog.c:
	* src/buoh-view-comic.c:
	* src/buoh-view-message.c:
	* src/buoh-view.c:
	* src/buoh-window.c:
	* src/buoh.c:

	Use G_DEFINE_TYPE macro.

2006-10-08  Carlos Garcia Campos  <carlosgc@gnome.org>

	* src/buoh-comic-loader.c:
	* src/buoh.c:

	Fix memory leaks.

2006-10-08  Carlos Garcia Campos  <carlosgc@gnome.org>

	* data/buoh-ui.xml:
	* src/buoh-view-comic.[ch]:
	* src/buoh-view.[ch]:
	* src/buoh-window.c:

	Implement best fit and fit width zoom modes. Fit width is now the mode
	by default.

2006-09-26  Carlos Garcia Campos  <carlosgc@gnome.org>

	* data/buoh.desktop.in: 

	s/Terminal=true/Terminal=false/ I don't know why I wrote true there. 

2006-09-25  Carlos Garcia Campos  <carlosgc@gnome.org>

	* INSTALL: Removed, it's a generated file
	* configure.in: Don't use deprecated AM init macro
	* src/buoh-comic-loader.c: Remove stupid debug message
	* data/Makefile.am:
	* data/buoh.desktop.in:
	* data/icons/Makefile.am:
	* data/icons/16x16/Makefile.am:
	* data/icons/16x16/buoh.png:
	* data/icons/64x64/Makefile.am:
	* data/icons/64x64/buoh.png:
	* src/buoh-view-message.c:
	* src/buoh-view.c:
	* src/buoh-window.c:
	* src/main.c:

	Install icons acording to the icon theme specification.

2006-09-24  Carlos Garcia Campos  <carlosgc@gnome.org>

	* src/buoh.c: